# kzen-mpc-js

./: README.md  package-lock.json  package.json
examples/: ed25519.js  secp256k1.js
lib/: context.js  index.js
native/: Cargo.toml
native/src/: lib.rs
