[package]
name = "mpc-lib-bindings"
version = "0.1.0"
authors = ["Kha Do <kha.do@quoine.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "mpc_lib_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
curv = { git = "https://github.com/nguyenkha/curv" }
multi-party-eddsa = { git = "https://github.com/nguyenkha/multi-party-eddsa" }
curv_kzen = { package = "curv-kzen", version = "0.7", default-features = false }
multi-party-ecdsa = { git = "https://github.com/nguyenkha/multi-party-ecdsa" }
neon-serde = "0.4.0"
serde_derive = "1.0.125"
serde = "1.0.125"
serde_json = "1.0"
